# langgraph-cpp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  LICENSE  PROJECT_MANIFEST.json  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.agent/: README.md
.agent/skills/: api-design.md  build-system.md  code-review.md  concurrency.md  debugging.md  definition-of-done.md  design-patterns.md  implementation.md  memory-safety.md  modern-cpp.md  module-plan.md  performance.md  refactoring.md  security-logging.md  testing.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
context/: AGENTS.md  AUTHORITY.md  CONVENTIONS.md  README.md  REVIEW_CHECKLIST.md  SKILL_INVENTORY.md  STACK.md
context/skills/: coding-standards.md  concurrency.md  core.md  foundation.md  hitl-interrupt.md  langgraph.md  performance.md  persistence.md  provider-http.md  security.md  stream-projection.md  subgraph.md  testing-examples.md
docs/: AI_INDEX.md  API_CONTRACT.md  API_REFERENCE.md  ARCHITECTURE.md  CONCURRENCY_MODEL.md  DEPENDENCY_POLICY.md  ERROR_MODEL.md  EXAMPLE_MATRIX.md  LANGGRAPH_COMPATIBILITY.md  LIMITATIONS.md  MAINTAINER_GUIDE.md  OWNERSHIP.md  PERFORMANCE_MODEL.md  PERSISTENCE_MODEL.md  PRD.md  QUALITY_MODEL.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY_MODEL.md  TEST_CATALOG.md  TRACEABILITY_MATRIX.md  plan.md  requirements.md  tasks.md
docs/ADR/: 0001-super-step-execution.md  0002-checkpoint-boundary.md  0003-status-result-error-model.md  0004-langgraph-compatibility-boundary.md  0005-state-update-reducer-boundary.md  0006-stategraph-compile-boundary.md  0007-store-checkpoint-separation.md  0008-optional-integrations-behind-ports.md  0009-stream-envelope-and-projection.md  0010-explicit-tool-registration.md  0011-public-namespace-lgc.md  README.md
docs/internal/: WBS.md
docs/reports/: example-smoke-report.md  latest-quality-report.md
docs/tutorials/: API_EXAMPLES.md
examples/: CMakeLists.txt  README.md  checkpoint_resume.cpp  command_goto.cpp  conditional_fanout.cpp  conditional_graph.cpp  edge_mock_tool_adapter.cpp  human_interrupt.cpp  llama_cpp_chat.cpp  llama_cpp_tool_calling.cpp  long_term_memory_store.cpp  loop_graph.cpp  minimal_graph.cpp  mock_edge_repair.cpp  model_tool_model_loop.cpp  parallel_fanout.cpp  provider_weather_tool.cpp  send_map_reduce.cpp  sqlite_checkpoint_resume.cpp  stream_projection.cpp  subgraph_module.cpp  time_travel_history.cpp  tool_approval_loop.cpp
examples/agent_patterns/: plan_and_solve.cpp  react.cpp  reflection.cpp
fuzz/: CMakeLists.txt  checkpoint_codec_fuzzer.cpp  content_envelope_fuzzer.cpp  fuzz_common.hpp  graph_namespace_fuzzer.cpp  json_schema_fuzzer.cpp  message_tool_json_fuzzer.cpp  run_config_fuzzer.cpp  sse_parser_fuzzer.cpp  state_reducer_fuzzer.cpp
include/langgraph_cpp/: langgraph.hpp
scripts/: build.sh  check-context-skills.sh  check-dependency-policy.sh  coverage.sh  generate-quality-report.sh  run-examples.sh
src/core/lifecycle/: lifecycle_adapters.cpp  lifecycle_adapters.hpp  lifecycle_components.cpp  lifecycle_components.hpp
src/core/runtime/: runtime_container.cpp  runtime_container.hpp  runtime_services.cpp  runtime_services.hpp
src/foundation/: README.md
src/foundation/async/: bounded_channel.hpp  channel.hpp  channel_select.hpp  channel_sender_receiver.hpp  channel_types.hpp  future.hpp  unbuffered_channel.hpp
src/foundation/blob/: blob_common.cpp  blob_common.hh  blob_metadata.cpp  blob_metadata.hh  blob_store.cpp  blob_store.hpp  filesystem_blob_store.cpp  memory_blob_store.cpp
src/foundation/cache/: cache.cpp  cache.hpp  cache_common.cpp  cache_common.hh  disk_cache.cpp  memory_cache.cpp
src/foundation/cancellation/: cancellation_token.cpp  cancellation_token.hpp
src/foundation/compression/: compressor.cpp  compressor.hpp
src/foundation/config/: config_loader.cpp  config_loader.hpp  config_value.cpp  config_value.hpp  env.cpp  env.hpp
src/foundation/crypto/: aes_gcm.cpp  crypto.cpp  crypto.hpp  encrypted_payload.cpp  encryption.cpp  encryption.hpp  encryption_common.cpp  encryption_common.hh  secure_checkpoint_codec.cpp  secure_storage.cpp
src/foundation/event/: callback_event_sink.cpp  callback_event_sink.hpp  event_sink_utils.hpp  i_event_sink.hpp  memory_event_sink.cpp  memory_event_sink.hpp  queued_event_sink.cpp  queued_event_sink.hpp  runtime_event.cpp  runtime_event.hpp
src/foundation/executor/: concurrent_executor.cpp  concurrent_executor.hpp  executor_checks.hpp  i_executor.hpp  inline_executor.cpp  inline_executor.hpp  owner_executor.hpp  serial_executor.cpp  serial_executor.hpp
src/foundation/filesystem/: atomic_file.cpp  filesystem.cpp  filesystem.hpp  filesystem_common.hh  path_utils.cpp  temp_file.cpp
src/foundation/id/: id_generator.cpp  id_generator.hpp
src/foundation/json/: json_codec.hpp  json_macros.hpp  json_schema.cpp  json_schema.hpp  json_schema_builder.cpp  (+4 more)
src/langgraph/: README.md
testdata/langgraph/: README.md  checkpoint_payload_v3.json  interrupt_resume_payload.json  message_tool_call.json  runnable_config_merge.json  stream_envelope_v3.json
tests/: CMakeLists.txt  README.md  agent_loop_test.cpp  async_channel_test.cpp  blob_store_test.cpp  cache_test.cpp  cancellation_test.cpp  checkpointer_test.cpp  compression_test.cpp  config_test.cpp  content_envelope_test.cpp  crash_recovery_test.cpp  crypto_test.cpp  docs_snippet_compile_test.cpp  edge_adapter_test.cpp  encryption_test.cpp  event_test.cpp  executor_test.cpp  failure_injection_test.cpp  filesystem_test.cpp  fuzz_pressure_test.cpp  graph_failure_contract_test.cpp  graph_runtime_test.cpp  http_client_test.cpp  id_generator_test.cpp  json_schema_test.cpp  langgraph_compat_test.cpp  langgraph_conformance_probe.cpp  lifecycle_test.cpp  logging_test.cpp  observability_test.cpp  process_test.cpp  provider_chat_model_test.cpp  python_langgraph_conformance.py  rate_limit_test.cpp  redaction_test.cpp  resource_limits_test.cpp  retry_policy_test.cpp  runtime_services_test.cpp  scheduler_test.cpp  (+7 more)
(+191 files in other folders)
